# SmartPointers

./: CMakeLists.txt  InfoWindow.cpp  InfoWindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
classes/: Book.cpp  Book.h  Library.cpp  Library.h  User.cpp  User.h
source/: Book.cpp  Book.h  BookDialog.cpp  BookDialog.h  BookModel.cpp  BookModel.h  Library.cpp  Library.h  User.h  UserModel.cpp  UserModel.h
